# Mini-Framework-Deep-Learning-T-Tensor

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  readme.md  requirements-dev.txt  setup.py  start_ttensor.ps1  ttensor_cuda_path.pth
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  native-build-self-hosted.yml
core/include/: kernels.hpp  losses.hpp  weight_loader.hpp
core/src/: bindings.cpp  kernels.cu  losses.cu
examples/: README.md  xor_cpu.py
include/: dataloader.hpp  device_manager.hpp  layers.hpp  optimizer.hpp  tensor.hpp
src/: bindings.cpp  dataloader.cu  device_manager.cu  layers.cu  optimizer.cu  tensor.cu
tests/: README.md  test_import_smoke.py  test_tensor_core.py
ttensor/: __init__.py
